# reminders-app

./: .gitignore  ChangeLog.txt  README.md  requirements.txt
app/: ChangeLog.txt  __init__.py  config.py  config_dialog.py  main.py  reminder_dialog.py  reminders_persistence.py  table_constants.py  timefield.py  timer_service.py
app/model/: __init__.py  formatting.py  reminder_item.py  reminders_model.py
app/qt_ui/: auto_resizing_table_view.py  date_banner.py  model_adapter.py  qt_table_model_adapter.py  reminder_button.py  reminder_dialog.py  reminders_window.py
app/qt_ui/delegates/: alert_button_delegate.py  base_cell_delegate.py  centered_delegate.py  delete_button_delegate.py  flag_delegate.py  left_justified_delegate.py  zOLD_base_button_delegate.py  zOLD_delete_button_delegate.py  zOLD_edit_button_delegate.py  zOLD_next_button_delegate.py
docs/: DesignNotes.md  QuickStart.md  ReleaseProcess.md  UserGuide.md
tests/: 00_print_sys_path.py  10_test_viewmodel.py  20_test_model_load.py  40_test_model_roundtrip.py  test_10_viewmodel.py  test_20_model_persistence.py  test_30_model_save.py  test_50_integration.py  test_timefield.py
tests/fixtures/: initial.csv  mock_reminders.py  reminder_factory.py
utilities/: __init__.py  class_template.py  core_tools.py  pyproject.toml  string_tools.py  time_tools.py
utilities/tests/: string_fcns_test.py  time_fcns_test.py
